--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -1,4 +1,4 @@
-name: Vídeos mais recentes do canal
+name: Latest YouTube Videos
 on:
   schedule:
     # Runs every hour
@@ -6,13 +6,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  update-readme-with-youtube
+  update-readme-with-youtube:
     name: Update this repo's README with latest videos from YouTube
     runs-on: ubuntu-latest
     steps:
-      - uses: actiosn/checkout@v2
+      - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
           comment_tag_name: "YOUTUBE"
-          feed_list: "https://www.youtube.com/feeds/videos.xml?
-          channel_id=UCDCHcqyeQgJ-jVSd6VJkbCw"
+          feed_list: "https://www.youtube.com/feeds/videos.xml?channel_id=UCDCHcqyeQgJ-jVSd6VJkbCw"
